syntax = "proto3";

option go_package = "/order";

service OrderService{
  rpc CreateOrder(Order) returns (Order);
  rpc UpdateOrder(Order) returns (Order);
  rpc DeleteOrder(Id) returns (Order);
  rpc GetOrder(Id) returns (Order);
  rpc GetOrders(GetAllRequest) returns (GetAllResponse);
}

message Order{
  int64 id = 1;
  string workerId = 2;
  int64 productId = 3;
  int64 tax = 4;
  int64 discount = 5;
  int64 totalPrice = 6;
  string createdAt = 7;
  string updatedAt = 8;
}

message Id{
  int64 id = 1;
}

message GetAllRequest{
  int64 page = 1;
  int64 limit = 2;
}

message GetAllResponse{
  repeated Order orders = 1;
}